syntax = "proto3";
package payment;

service PaymentService {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string orderId = 1;
  double amount    = 2;
  string method    = 3;
  int64  userId    = 4;
}

message PaymentResponse {
  bool   success        = 1;
  string transactionId  = 2;
  string failureReason  = 3;
}
